@@ -15,7 +15,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclInt.h,v 1.127.2.119 2009/08/12 16:10:58 dgp Exp $
+ * RCS: @(#) $Id: tclInt.h,v 1.127.2.120 2009/08/17 14:00:43 dgp Exp $
  */
 
 #ifndef _TCLINT
@@ -2714,7 +2714,7 @@ typedef struct ForIterData {
     Tcl_Obj* cond; /* loop condition expression */
     Tcl_Obj* body; /* loop body */
     Tcl_Obj* next; /* loop step script, NULL for 'while' */
-    char*    msg;  /* error message part */
+    const char* msg;  /* error message part */
     int      word; /* Index of the body script in the command */
 } ForIterData;
 
